[develop]
script_dir=$base/lib/navground_ri
[install]
install_scripts=$base/lib/navground_ri
[options.entry_points]
navground_tasks = 
    waypoints_with_planner = navground_ri.waypoints_with_planner_task:WaypointsWithPlannerTask
navground_scenarios = 
    indoorgml_scenario = navground_ri.indoorgml_scenario:IndoorGMLScenario

